# llvm-practice

./: CMakeLists.txt  README.md
Calc/: README.md
Calc/src/: CMakeLists.txt  CodeGen.cpp  Lexer.cpp  Lexer.h  Sema.cpp  rtcalc.c
Docs/: Frontend.md  IR_Generation.md
src/: AST.h  CMakeLists.txt  Calc.cpp  CodeGen.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Sema.cpp
tinylang/: README.md
tinylang/include/tinylang/Basic/: Diagnostic.cpp  Diagnostic.def  Diagnostic.h
tinylang/lib/Basic/: Diagnostic.cpp
